Se realizo shell sort y se corrigieron bugs dentro de lab escape

--- a/est datos/Js/index.html
+++ b/est datos/Js/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="mergesort.js"></script>
+    <script src="Shellsort.js"></script>
 </body>
 </html>
