--- a/est datos/Lab escape/index.html
+++ b/est datos/Lab escape/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escape del Laberinto</title>
     <link rel="stylesheet" href="style.css">
+    <script src = "phaser.min.js"></script>
 </head>
 <body>
     <h1>Escape del Laberinto</h1>
-    <canvas id="mazeCanvas"></canvas>
+    
     <script src="script.js"></script>
+    <div id="game"></div>
 </body>
 </html>
